--- a/.config/termite/config
+++ b/.config/termite/config
@@ -13,7 +13,8 @@ bold_is_bright      = true
 clickable_url       = true
 hyperlinks          = true
 cursor_blink        = off
-cursor_shape        = block
+# cursor_shape        = block
+cursor_shape        = ibeam
 dynamic_title       = true
 font                = Iosevka Term 11
 mouse_autohide      = true
