--- a/.config/sway/config
+++ b/.config/sway/config
@@ -11,12 +11,15 @@ set $right l
 set $term termite
 set $term_two alacritty
 set $menu rofi -show drun
+# set $menu wofi --allow-images --allow-markup --hide-scroll
 set $lock swaylock
 
 output * background $WALLPAPER fill
 output eDP-1 scale 2
+output eDP-1 position 0 0
 
-bindsym $mod+Shift+o output eDP-1 toggle
+bindsym $mod+Shift+p output eDP-1 disable
+bindsym $mod+p output eDP-1 enable
 
 input "1:1:AT_Translated_Set_2_keyboard" {
     xkb_layout gb,es
@@ -24,13 +27,25 @@ input "1:1:AT_Translated_Set_2_keyboard" {
 }
 input "1241:402:USB-HID_Keyboard" {
     xkb_layout us
-    xkb_options caps:swapescape
+}
+input "65261:24673:OLKB_Preonic_Keyboard" {
+    xkb_layout us
 }
 input "1739:31251:DLL06E4:01_06CB:7A13_Touchpad" {
     tap enabled
     middle_emulation enabled
     natural_scroll enabled
     scroll_factor 0.20
+}
+input "1133:16514:Logitech_MX_Master_3" {
+    accel_profile adaptive
+    natural_scroll enabled
+    pointer_accel -0.6
+}
+input "1133:50475:Logitech_USB_Receiver_Mouse" {
+    accel_profile adaptive
+    natural_scroll enabled
+    pointer_accel -0.6
 }
 
 client.focused          #66b3ff #66b3ff #0f111a #cc99ff #66b3ff
@@ -66,26 +81,26 @@ bindsym $mod+Shift+$down move down
 bindsym $mod+Shift+$up move up
 bindsym $mod+Shift+$right move right
 
-bindsym $mod+1 workspace " 1 "
-bindsym $mod+2 workspace " 2 "
-bindsym $mod+3 workspace " 3 "
-bindsym $mod+4 workspace " 4 "
-bindsym $mod+5 workspace " 5 "
-bindsym $mod+6 workspace " 6 "
-bindsym $mod+7 workspace " 7 "
-bindsym $mod+8 workspace " 8 "
-bindsym $mod+9 workspace " 9 "
-bindsym $mod+0 workspace " 0 "
-bindsym $mod+Shift+1 move container to workspace " 1 "
-bindsym $mod+Shift+2 move container to workspace " 2 "
-bindsym $mod+Shift+3 move container to workspace " 3 "
-bindsym $mod+Shift+4 move container to workspace " 4 "
-bindsym $mod+Shift+5 move container to workspace " 5 "
-bindsym $mod+Shift+6 move container to workspace " 6 "
-bindsym $mod+Shift+7 move container to workspace " 7 "
-bindsym $mod+Shift+8 move container to workspace " 8 "
-bindsym $mod+Shift+9 move container to workspace " 9 "
-bindsym $mod+Shift+0 move container to workspace " 0 "
+bindsym $mod+1 workspace 1
+bindsym $mod+2 workspace 2
+bindsym $mod+3 workspace 3
+bindsym $mod+4 workspace 4
+bindsym $mod+5 workspace 5
+bindsym $mod+6 workspace 6
+bindsym $mod+7 workspace 7
+bindsym $mod+8 workspace 8
+bindsym $mod+9 workspace 9
+bindsym $mod+0 workspace 0
+bindsym $mod+Shift+1 move container to workspace 1
+bindsym $mod+Shift+2 move container to workspace 2
+bindsym $mod+Shift+3 move container to workspace 3
+bindsym $mod+Shift+4 move container to workspace 4
+bindsym $mod+Shift+5 move container to workspace 5
+bindsym $mod+Shift+6 move container to workspace 6
+bindsym $mod+Shift+7 move container to workspace 7
+bindsym $mod+Shift+8 move container to workspace 8
+bindsym $mod+Shift+9 move container to workspace 9
+bindsym $mod+Shift+0 move container to workspace 0
 
 bindsym $mod+b splith
 bindsym $mod+v splitv
@@ -133,8 +148,6 @@ set $white   #cccccc44
 
 bar {
     swaybar_command swaybar
-    # font "Iosevka 10"
-    # font "Roboto Condensed Bold 10"
     font "Roboto Condensed, Font Awesome 5 Free, Bold 10"
     height 31
     mode hide
@@ -151,6 +164,8 @@ bar {
         binding_mode $yellow $yellow $bg
     }
 }
+
+exec autotiling
 
 include /usr/local/etc/sway/config.d/*
 
