--- a/.config/sway/config
+++ b/.config/sway/config
@@ -2,50 +2,82 @@
 #
 # Read `man 5 sway` for a complete reference.
 
+### Variables
+
 set $mod Mod4
 
 set $left h
 set $down j
 set $up k
 set $right l
+
 set $term alacritty
-# set $menu rofi -show drun
-set $menu wofi
-# set $menu wofi --allow-images --allow-markup --hide-scroll
+# set $menu wofi --hide-scroll --show drun
+set $menu yofi apps
 set $lock swaylock
 
-output * background $WALLPAPER fill
+set $WOBSOCK $XDG_RUNTIME_DIR/wob.sock
+
+### Output configuration
+  # Example configuration:
+  #
+  #   output HDMI-A-1 resolution 1920x1080 position 1920,0
+  #
+  # You can get the names of your outputs by running: swaymsg -t get_outputs
+
+output * bg ~/images/wallhaven-jxwwe5.png fill
+# output * bg ~/images/wallhaven-9dze8k.jpg fill
+# output * bg ~/images/wallhaven-jxwro5.png fill
+# output * bg ~/images/wallhaven-2yzywy.png tile
+
 output eDP-1 scale 2
 output eDP-1 position 0 0
 
-bindsym $mod+Shift+p output eDP-1 disable
-bindsym $mod+p output eDP-1 enable
+output DP-1 scale 1.25
+
+### Idle configuration
+  #
+  # Example configuration:
+  #
+  # exec swayidle -w \
+  #          timeout 300 'swaylock -f -c 000000' \
+  #          timeout 600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
+  #          before-sleep 'swaylock -f -c 000000'
+  #
+  # This will lock your screen after 300 seconds of inactivity, then turn off
+  # your displays after another 300 seconds, and turn your screens back on when
+  # resumed. It will also lock your screen before your computer goes to sleep.
+
+### Input configuration
+  #
+  # Example configuration:
+  #
+  #   input "2:14:SynPS/2_Synaptics_TouchPad" {
+  #       dwt enabled
+  #       tap enabled
+  #       natural_scroll enabled
+  #       middle_emulation enabled
+  #   }
+  #
+  # You can get the names of your inputs by running: swaymsg -t get_inputs
+  # Read `man 5 sway-input` for more information about this section.
 
 input "1:1:AT_Translated_Set_2_keyboard" {
-    xkb_layout gb,es
-    xkb_options caps:swapescape
+  xkb_layout gb
+  xkb_options caps:swapescape
 }
-input "1241:402:USB-HID_Keyboard" {
-    xkb_layout us
+input 1739:31251:DLL06E4:01_06CB:7A13_Touchpad {
+  accel_profile flat
+  middle_emulation enabled
+  natural_scroll enabled
+  scroll_factor 0.15
+  tap enabled
 }
-input "65261:24673:OLKB_Preonic_Keyboard" {
-    xkb_layout us
+input 5426:148:Razer_Orochi_V2 {
+  accel_profile flat
 }
-input "1739:31251:DLL06E4:01_06CB:7A13_Touchpad" {
-    tap enabled
-    middle_emulation enabled
-    natural_scroll enabled
-    scroll_factor 0.20
-}
-input "1133:16514:Logitech_MX_Master_3" {
-    accel_profile adaptive
-    natural_scroll enabled
-    pointer_accel -0.6
-}
-input "1133:50475:Logitech_USB_Receiver_Mouse" {
-    accel_profile adaptive
-    natural_scroll enabled
-    pointer_accel -0.6
+input 1133:16514:Logitech_MX_Master_3 {
+  accel_profile flat
 }
 
 client.focused          #66b3ff #66b3ff #0f111a #cc99ff #66b3ff
@@ -67,6 +99,9 @@ bindsym $mod+Shift+s exec $HOME/.local/bin/quit.sh shutdown
 bindsym $mod+Ctrl+Shift+s exec $HOME/.local/bin/quit.sh suspend
 bindsym $mod+Shift+r exec $HOME/.local/bin/quit.sh reboot
 bindsym $mod+w kill
+
+bindsym $mod+Shift+p output eDP-1 disable
+bindsym $mod+p output eDP-1 enable
 
 bindsym $mod+Shift+m gaps inner current plus 20
 bindsym $mod+Shift+n gaps inner current set 0
@@ -104,33 +139,34 @@ bindsym $mod+Shift+0 move container to workspace 0
 bindsym $mod+b splith
 bindsym $mod+v splitv
 # bindsym $mod+s layout stacking
-# bindsym $mod+e layout toggle split
+bindsym $mod+e layout toggle split
 bindsym $mod+f fullscreen
 bindsym $mod+Shift+f floating toggle
 # bindsym $mod+a focus parent
 
-# bindsym XF86MonBrightnessUp exec --no-startup-id brillo -A 50
-# bindsym XF86MonBrightnessDown exec --no-startup-id brillo -S 0
+# bindsym XF86MonBrightnessUp exec --no-startup-id $HOME/.local/bin/brillo.sh -A 5
+# bindsym XF86MonBrightnessDown exec --no-startup-id $HOME/.local/bin/brillo.sh -U 5
 
-bindsym XF86MonBrightnessUp exec --no-startup-id $HOME/.local/bin/brillo.sh -A 5
-bindsym XF86MonBrightnessDown exec --no-startup-id $HOME/.local/bin/brillo.sh -U 5
+bindsym XF86MonBrightnessUp exec --no-startup-id brillo -u 150000 -A 5
+bindsym XF86MonBrightnessDown exec --no-startup-id brillo -u 150000 -U 5
 
-bindsym XF86AudioRaiseVolume exec --no-startup-id pamixer -i 5
-bindsym XF86AudioLowerVolume exec --no-startup-id pamixer -d 5
-bindsym XF86AudioMute exec --no-startup-id pamixer -t
+# bindsym XF86AudioRaiseVolume exec --no-startup-id wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+# bindsym XF86AudioLowerVolume exec --no-startup-id wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindsym XF86AudioRaiseVolume exec --no-startup-id $HOME/.local/bin/volume.sh 5%+
+bindsym XF86AudioLowerVolume exec --no-startup-id $HOME/.local/bin/volume.sh 5%-
+bindsym XF86AudioMute exec --no-startup-id wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 
 for_window [class="imv"] floating enable
 for_window [app_id="imv"] floating enable
-for_window [app_id="eog"] floating enable
 
 mode "resize" {
-    bindsym $left resize shrink width 10px
-    bindsym $down resize grow height 10px
-    bindsym $up resize shrink height 10px
-    bindsym $right resize grow width 10px
+  bindsym $left resize shrink width 10px
+  bindsym $down resize grow height 10px
+  bindsym $up resize shrink height 10px
+  bindsym $right resize grow width 10px
 
-    bindsym Return mode "default"
-    bindsym Escape mode "default"
+  bindsym Return mode "default"
+  bindsym Escape mode "default"
 }
 bindsym $mod+r mode "resize"
 
@@ -145,26 +181,45 @@ set $magenta #cc99ff
 set $cyan    #66e6ff88
 set $white   #cccccc44
 
+#
+# Status Bar:
+#
+# Read `man 5 sway-bar` for more information about this section.
 bar {
-    swaybar_command swaybar
-    font "Roboto Condensed, Font Awesome 5 Free, Bold 10"
-    height 31
-    mode hide
-    modifier $mod
-    status_command while "$HOME/.local/bin/status.sh"; do sleep 1; done
-    colors {
-        background $bg
-        statusline $fg
-        separator $fg
-        focused_workspace $blue $blue $bg
-        active_workspace $blue $bg $fg
-        inactive_workspace $bg $bg $fg
-        urgent_workspace $red $red $bg
-        binding_mode $yellow $yellow $bg
-    }
+  position bottom
+  font "Roboto Condensed, Font Awesome 6 Free, Bold 10"
+  height 31
+  mode hide
+  modifier $mod
+  status_command while "$HOME/.local/bin/status.sh"; do sleep 1; done
+  colors {
+    background $bg
+    statusline $fg
+    separator $fg
+    focused_workspace $blue $blue $bg
+    active_workspace $blue $bg $fg
+    inactive_workspace $bg $bg $fg
+    urgent_workspace $red $red $bg
+    binding_mode $yellow $yellow $bg
+  }
 }
 
-exec autotiling
 
-include /usr/local/etc/sway/config.d/*
+#
+# Scratchpad:
+#
+# Sway has a "scratchpad", which is a bag of holding for windows.
+# You can send windows there and get them back later.
 
+# Move the currently focused window to the scratchpad
+bindsym $mod+Shift+minus move scratchpad
+
+# Show the next scratchpad window or hide the focused scratchpad window.
+# If there are multiple scratchpad windows, this command cycles through them.
+bindsym $mod+minus scratchpad show
+
+exec rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
+exec systemctl --user import-environment DISPLAY WAYLAND_DISPLAY SWAYSOCK
+xwayland disable
+
+include /etc/sway/config.d/*
