--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,8 +1,8 @@
 
 # change prefix keybinding
-set -g prefix C-a
+set -g prefix C-Space
 unbind C-b
-bind C-a send-prefix
+bind C-Space send-prefix
 
 # open new instances with specified shell
 set -g default-shell "/bin/fish"
@@ -101,7 +101,6 @@ bind -r l select-pane -R
 # switch between windows
 bind -r C-h previous-window
 bind -r C-l next-window
-bind C-Space last-window
 bind -r C-c new-window
 bind -r C-x kill-window
 
