--- a/.config/sway/config
+++ b/.config/sway/config
@@ -13,7 +13,8 @@ set $right l
 
 set $term alacritty
 # set $menu wofi --hide-scroll --show drun
-set $menu yofi apps
+# set $menu yofi apps
+set $menu bemenu-run --ignorecase --list 16 --line-height 24 --fn "Iosevka 16"
 set $lock swaylock
 
 set $WOBSOCK $XDG_RUNTIME_DIR/wob.sock
@@ -25,10 +26,7 @@ set $WOBSOCK $XDG_RUNTIME_DIR/wob.sock
   #
   # You can get the names of your outputs by running: swaymsg -t get_outputs
 
-output * bg ~/images/wallhaven-jxwwe5.png fill
-# output * bg ~/images/wallhaven-9dze8k.jpg fill
-# output * bg ~/images/wallhaven-jxwro5.png fill
-# output * bg ~/images/wallhaven-2yzywy.png tile
+output * bg ~/Pictures/wallhaven-1pdqdv.jpg fill
 
 output eDP-1 scale 2
 output eDP-1 position 0 0
