--- a/.config/sway/config
+++ b/.config/sway/config
@@ -26,12 +26,12 @@ set $WOBSOCK $XDG_RUNTIME_DIR/wob.sock
   #
   # You can get the names of your outputs by running: swaymsg -t get_outputs
 
-output * bg ~/Pictures/wallhaven-1pdqdv.jpg fill
+output * bg ~/Pictures/geisha.png fill
 
 output eDP-1 scale 2
 output eDP-1 position 0 0
 
-output DP-1 scale 1.25
+output DP-1 scale 1
 
 ### Idle configuration
   #
@@ -185,7 +185,7 @@ set $white   #cccccc44
 # Read `man 5 sway-bar` for more information about this section.
 bar {
   position bottom
-  font "Roboto Condensed, Font Awesome 6 Free, Bold 10"
+  font "Roboto Condensed, Iosevka Nerd Font, Bold 10"
   height 31
   mode hide
   modifier $mod
