add new launcher tofi

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -106,12 +106,12 @@ bind -r C-x kill-window
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'Freed-Wu/tmux-digit'
 set -g @plugin 'sainnhe/tmux-fzf'
 
-set -g @continuum-restore 'on'
+# set -g @continuum-restore 'on'
 TMUX_FZF_LAUNCH_KEY="C-f"
 
 # initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
