--- a/.config/sway/config
+++ b/.config/sway/config
@@ -12,12 +12,9 @@ set $up k
 set $right l
 
 set $term alacritty
-# set $menu wofi --hide-scroll --show drun
-# set $menu yofi apps
-set $menu bemenu-run --ignorecase --list 16 --line-height 24 --fn "Iosevka 16"
+# set $menu kickoff
+set $menu tofi-drun --config $HOME/.config/tofi/config.ini
 set $lock swaylock
-
-set $WOBSOCK $XDG_RUNTIME_DIR/wob.sock
 
 ### Output configuration
   # Example configuration:
@@ -26,7 +23,7 @@ set $WOBSOCK $XDG_RUNTIME_DIR/wob.sock
   #
   # You can get the names of your outputs by running: swaymsg -t get_outputs
 
-output * bg ~/Pictures/geisha.png fill
+output * bg ~/pictures/geisha.png fill
 
 output eDP-1 scale 2
 output eDP-1 position 0 0
@@ -215,9 +212,5 @@ bindsym $mod+Shift+minus move scratchpad
 # Show the next scratchpad window or hide the focused scratchpad window.
 # If there are multiple scratchpad windows, this command cycles through them.
 bindsym $mod+minus scratchpad show
-
-exec rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
-exec systemctl --user import-environment DISPLAY WAYLAND_DISPLAY SWAYSOCK
-xwayland disable
 
 include /etc/sway/config.d/*
