--- a/.config/sway/config
+++ b/.config/sway/config
@@ -4,6 +4,8 @@
 
 ### Variables
 
+set $bin $HOME/.local/bin
+
 set $mod Mod4
 
 set $left h
@@ -12,7 +14,6 @@ set $up k
 set $right l
 
 set $term alacritty
-# set $menu kickoff
 set $menu tofi-drun --config $HOME/.config/tofi/config.ini
 set $lock swaylock
 
@@ -42,6 +43,11 @@ output DP-1 scale 1
   # This will lock your screen after 300 seconds of inactivity, then turn off
   # your displays after another 300 seconds, and turn your screens back on when
   # resumed. It will also lock your screen before your computer goes to sleep.
+
+exec swayidle -w \
+         timeout 300 'swaylock' \
+         timeout 600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
+         before-sleep 'swaylock'
 
 ### Input configuration
   #
@@ -75,24 +81,38 @@ input 1133:16514:Logitech_MX_Master_3 {
   accel_profile flat
 }
 
-client.focused          #66b3ff #66b3ff #0f111a #cc99ff #66b3ff
-client.focused_inactive #0f111a #0f111a #cccccc #cc99ff #0f111a
-client.unfocused        #0f111a #0f111a #cccccc #cc99ff #0f111a
-client.urgent           #ff526f #ff526f #0f111a #cc99ff #ff526f
+set $black   #292933
+set $red     #ff526f
+set $green   #9ce677
+set $yellow  #ffcc66
+set $blue    #66b3ff
+set $magenta #cc99ff
+set $cyan    #66e6ff
+set $white   #cccccc
+set $bg      #0f111a
+set $fg      $white
+
+# class                 border   backgr.  text     indicat. child_border
+client.focused          $white   $white   $bg      $yellow  $white
+client.focused_inactive $bg      $bg      $white   $yellow  $bg
+client.unfocused        $bg      $bg      $white   $yellow  $bg
+client.urgent           $red     $red     $bg      $yellow  $red
 
 smart_borders on
-default_border pixel
+default_border pixel 1
 
 floating_modifier $mod normal
+
+focus_wrapping no
 
 bindsym $mod+Return exec $term
 bindsym $mod+space exec $menu
 bindsym $mod+Shift+e exec $lock
 bindsym $mod+Shift+c reload
 bindsym $mod+Shift+q exit
-bindsym $mod+Shift+s exec $HOME/.local/bin/quit.sh shutdown
-bindsym $mod+Ctrl+Shift+s exec $HOME/.local/bin/quit.sh suspend
-bindsym $mod+Shift+r exec $HOME/.local/bin/quit.sh reboot
+bindsym $mod+Shift+s exec $bin/quit.sh shutdown
+bindsym $mod+Ctrl+Shift+s exec $bin/quit.sh suspend
+bindsym $mod+Shift+r exec $bin/quit.sh reboot
 bindsym $mod+w kill
 
 bindsym $mod+Shift+p output eDP-1 disable
@@ -109,6 +129,9 @@ bindsym $mod+Shift+$left move left
 bindsym $mod+Shift+$down move down
 bindsym $mod+Shift+$up move up
 bindsym $mod+Shift+$right move right
+
+bindgesture swipe:right workspace prev
+bindgesture swipe:left workspace next
 
 bindsym $mod+1 workspace 1
 bindsym $mod+2 workspace 2
@@ -139,16 +162,11 @@ bindsym $mod+f fullscreen
 bindsym $mod+Shift+f floating toggle
 # bindsym $mod+a focus parent
 
-# bindsym XF86MonBrightnessUp exec --no-startup-id $HOME/.local/bin/brillo.sh -A 5
-# bindsym XF86MonBrightnessDown exec --no-startup-id $HOME/.local/bin/brillo.sh -U 5
-
 bindsym XF86MonBrightnessUp exec --no-startup-id brillo -u 150000 -A 5
 bindsym XF86MonBrightnessDown exec --no-startup-id brillo -u 150000 -U 5
 
-# bindsym XF86AudioRaiseVolume exec --no-startup-id wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-# bindsym XF86AudioLowerVolume exec --no-startup-id wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindsym XF86AudioRaiseVolume exec --no-startup-id $HOME/.local/bin/volume.sh 5%+
-bindsym XF86AudioLowerVolume exec --no-startup-id $HOME/.local/bin/volume.sh 5%-
+bindsym XF86AudioRaiseVolume exec --no-startup-id wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+bindsym XF86AudioLowerVolume exec --no-startup-id wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindsym XF86AudioMute exec --no-startup-id wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 
 for_window [class="imv"] floating enable
@@ -165,7 +183,7 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
-set $fg      #ccccccff
+set $fg      #cccccc
 set $bg      #0f111acc
 set $black   #292933
 set $red     #ff526fcc
@@ -182,11 +200,13 @@ set $white   #cccccc44
 # Read `man 5 sway-bar` for more information about this section.
 bar {
   position bottom
-  font "Roboto Condensed, Iosevka Nerd Font, Bold 10"
+  # font "Roboto Condensed, Iosevka Nerd Font, Font Awesome 6 Free, Bold 10"
+  font "Roboto Condensed, Bold 10"
   height 31
   mode hide
   modifier $mod
-  status_command while "$HOME/.local/bin/status.sh"; do sleep 1; done
+  # status_command while "$bin/status.sh"; do sleep 1; done
+  status_command i3status-rs
   colors {
     background $bg
     statusline $fg
